# lemonsqueezy-py

./: README.md  pyproject.toml
src/lemonsqueezy/: client.py  page.py  subscription.py
tests/: client_test.py
