[project]
name = "lemonsqueezy-py"
version = "0.0.1"
description = "lemonsqueezy python client"
authors = [
    {name = "浩", email = "inf2inf2@outlook.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
